--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./dist/app.js",
+    "start": "node ./dist/app.js",
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "nodemon ./dist/app.js"
+    "dev": "node ./dist/app.js"
   },
   "author": "",
   "license": "ISC",
